# platform.core.uifw.ise-default

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README  bootstrap  configure.ac  control.in  ise-default.xml  project.config
data/: Makefile.am
data/edc/candidate-multiline/: candidate.edc
data/edc/candidate-single/: candidate.edc
data/edc/gengrid/: customised_gengrid.edc
data/layout/sdk/: LYT_CM_POPUP.xml  LYT_LANDSCAPE_QTY_ARMENIAN.xml  LYT_LANDSCAPE_QTY_ASSAMESE.xml  LYT_LANDSCAPE_QTY_BENGALI.xml  LYT_LANDSCAPE_QTY_BULGARIAN.xml  LYT_LANDSCAPE_QTY_GEORGIAN.xml  LYT_LANDSCAPE_QTY_GREEK.xml  LYT_LANDSCAPE_QTY_GUJARATI.xml  LYT_LANDSCAPE_QTY_HINDI.xml  LYT_LANDSCAPE_QTY_KANANDA.xml  LYT_LANDSCAPE_QTY_KAZAKH.xml  LYT_LANDSCAPE_QTY_LITHUANIAN.xml  LYT_LANDSCAPE_QTY_MACEDONIAN.xml  LYT_LANDSCAPE_QTY_MALAYALAM.xml  LYT_LANDSCAPE_QTY_PUNJABI.xml  LYT_LANDSCAPE_QTY_SINHALA.xml  LYT_LANDSCAPE_QTY_SLOVENIAN.xml  LYT_LANDSCAPE_QTY_TAMIL.xml  LYT_LANDSCAPE_QTY_TELUGU.xml  LYT_LANDSCAPE_QTY_THAI.xml  LYT_LANDSCAPE_QTY_UKRAINIAN.xml  LYT_LANDSCAPE_QTY_VIETNAMESE.xml  LYT_PORTRAIT_QTY_MALAYALAM.xml  LYT_PORTRAIT_QTY_TAMIL.xml  ise_lang_table.xml
data/layout/tv/: ise_lang_table.xml
data/layout/wearable/: LYT_PORTRAIT_4X4_ARMENIAN.xml  ise_lang_table.xml
data/pixmaps/: Makefile.am
debian/: changelog  control  copyright  ise-default.install.in  rules
mcf/: mcfactionstate.cpp  mcfcontext.cpp  mcfcontroller.cpp  mcfcore.cpp  mcfdebug.cpp  mcferroradjustment.cpp  mcfevents.cpp  mcffeedback.cpp  mcffontproxy.cpp  mcfgraphics.cpp  mcfgwes.cpp  mcfimageproxy.cpp  mcfresourcecache.cpp  mcfuibuilder.cpp  mcfutils.cpp  mcfwindows.cpp
mcf/gwes/efl/: mcfevents-efl.cpp  mcfevents-efl.h  mcfgraphics-efl.cpp  mcfgraphics-efl.h  mcfwindows-efl.cpp  mcfwindows-efl.h
mcf/gwes/gtk/: mcfevents-gtk.cpp  mcfevents-gtk.h  mcfgraphics-cairo.cpp  mcfgraphics-cairo.h  mcfgraphics-gtk.cpp  mcfgraphics-gtk.h  mcfwindows-gtk.cpp  mcfwindows-gtk.h
mcf/gwes/win32/: mcfevents-win32.cpp  mcfevents-win32.h  mcfgraphics-win32.cpp  mcfgraphics-win32.h  mcfwindows-win32.cpp  mcfwindows-win32.h
mcf/include/: mcf.h  mcfactionstate.h  mcfconfig.h  mcfcontext.h  mcfcontroller.h  mcfcore.h  mcfdebug.h  mcferroradjustment.h  mcfeventcallback.h  mcfevents.h  mcffeedback.h  mcffontproxy.h  mcfgraphics.h  mcfgwes.h  mcfimageproxy.h  mcfkeydefines.h  mcfresourcecache.h  mcfstructs.h  mcftypes.h  mcfuibuilder.h  mcfutils.h  mcfversion.h  mcfwindows.h
mcf/utils/linux/: mcfutils-linux.cpp
mcf/utils/win32/: mcfutils-win32.cpp
packaging/: ise-default.spec
po/: POTFILES.in  ar.po  as.po  az.po  be_BY.po  bg.po  bn.po  bn_BD.po  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en.po  en_PH.po  en_US.po  es_ES.po  es_US.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_FR.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  (+46 more)
res/: mcfresource-emoticon-popup.h  mcfresource-land-qty-dutch.h  mcfresource-land-qty-email.h  mcfresource-land-qty-english.h  mcfresource-land-qty-french.h  mcfresource-land-qty-german.h  mcfresource-land-qty-greek.h  mcfresource-land-qty-italian.h  mcfresource-land-qty-portuguese.h  mcfresource-land-qty-russian.h  mcfresource-land-qty-spanish.h  mcfresource-land-qty-turkish.h  mcfresource-land-qty-url.h  mcfresource-popup.h  mcfresource-port-qty-dutch.h  mcfresource-port-qty-email.h  mcfresource-port-qty-english.h  mcfresource-port-qty-french.h  mcfresource-port-qty-german.h  mcfresource-port-qty-greek.h  mcfresource-port-qty-italian.h  mcfresource-port-qty-portuguese.h  mcfresource-port-qty-russian.h  mcfresource-port-qty-spanish.h  mcfresource-port-qty-sym1.h  mcfresource-port-qty-sym2.h  mcfresource-port-qty-sym3.h  mcfresource-port-qty-sym4.h  mcfresource-port-qty-turkish.h  mcfresource-port-qty-url.h  mcfresource.cpp  mcfresource.h  mcfresourcekeys.h
src/: Makefile.am  cbhm.cpp  common.cpp  efl_ise_setup.cpp  input-method-protocol.c  ise-default-setting.cpp  ise-emoticon-mode.cpp  ise.cpp  isemain.cpp  languages.cpp  languagesetting.cpp  main.cpp  option.cpp  setup_module.cpp  window_slide_animator.cpp
src/candidate/efl/: candidate-multiline-efl.cpp  candidate-multiline-efl.h
src/include/: cbhm.h  common.h  eflimdebug.h  input-method-client-protocol.h  ise-default-setting.h  ise.h  isedata.h  languagesetting.h  option.h  perf_test.h  strtbl.h  window_slide_animator.h
src/sdk/: ise_lang_table.cpp  ise_lang_table.h  sdk.cpp  sdk.h
