## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2008 SAMSUNG
##

MAINTAINERCLEANFILES	= Makefile.in
CLEANFILES              = *.bak

#SUBDIRS			= pixmaps theme

SUBDIRS			= pixmaps

icondir			= @ISF_ICONDIR@
icon_DATA		= @ISE_NAME@.png


helpdir	                = @ISF_MODULEDIR@/Helper
help_DATA               = @ISE_NAME@.help
