## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2008 SAMSUNG
##

MAINTAINERCLEANFILES	= Makefile.in

INST_ICONS	= 	\
	fontprop.dat \
	keypad_eng_punctuation.png \
	language_icon_port.png \
	language_icon_port_grey.png \
	language_icon_port_disable.png \
	symbol_icon_port.png \
	textinput_bottom_button_function.png \
	textinput_bottom_button_nml.png \
	textinput_bottom_button_press.png \
	textinput_french_icon_clear.png \
	textinput_french_icon_shift_01.png \
	textinput_french_icon_shift_01_disable.png \
	textinput_french_icon_shift_02.png \
	textinput_french_icon_shift_03.png \
	textinput_icon_arrow_down.png \
	textinput_icon_arrow_left.png \
	textinput_icon_arrow_right.png \
	textinput_icon_arrow_up.png \
	textinput_icon_space.png \
	textinput_icon_space_email.png \
	textinput_icon_space_email_press.png \
	textinput_icon_space_press.png \
	textinput_panel_bg.png \
	textinput_panel_dimming.png \
	textinput_popup_bg1.png \
	textinput_popup_bg2.png \
	textinput_popup_bg3.png \
	textinput_popup_button_function.png \
	textinput_popup_button_nml.png \
	textinput_popup_button_press.png \
	textinput_qwerty_button_capslock_press.png \
	textinput_qwerty_button_function.png \
	textinput_qwerty_button_nml.png \
	textinput_qwerty_button_press.png \
	textinput_qwerty_icon_clear.png \
	textinput_qwerty_icon_enter.png \
	textinput_qwerty_icon_enter_disabled.png \
	textinput_qwerty_icon_shift_01.png \
	textinput_qwerty_icon_shift_02.png \
	textinput_qwerty_icon_shift_03.png \
	textinput_button_symbol_left.png \
	textinput_button_symbol_left_press.png \
	textinput_button_symbol_right.png \
	textinput_button_symbol_right_press.png \
	04_textinput_symbol_arrow_left.png \
	04_textinput_symbol_arrow_right.png \
	04_textinput_bubble_umlaut_bg.png 



westernicondir			= @PREFIX_DIR@/share/isf/ise/ise-default/480x800/default/
westernicon_DATA		= $(INST_ICONS)

